--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ dotenvy = "0.15.6"
 comrak = "0.15.0"
 bbscope = "0.0.6"
 rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
+rand = "0.8.5"
 rocket-session-store = "0.2.0"
