--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ bbscope = "0.0.6"
 rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
 rand = "0.8.5"
 rocket-session-store = "0.2.0"
+tokio = { version = "1.23.0", features = ["full"] }
 tokio-postgres = "0.7.7"
