--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.5"
+chrono = { version = "0.4.23", features = ["std"] }
 dotenvy = "0.15.6"
 comrak = "0.15.0"
 bbscope = "0.0.6"
 rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
-rand = "0.8.5"
 rocket-session-store = "0.2.0"
 tokio = { version = "1.23.0", features = ["full"] }
 tokio-postgres = "0.7.7"
+postgres-types = { version = "0.2.4", features = ["derive"] }
