--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
+base64 = "0.20.0"
 chrono = { version = "0.4.23", features = ["std"] }
 dotenvy = "0.15.6"
 comrak = "0.15.0"
