--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ rocket-session-store = "0.2.0"
 tokio = { version = "1.23.0", features = ["full"] }
 tokio-postgres = "0.7.7"
 postgres-types = { version = "0.2.4", features = ["derive"] }
+rocket_db_pools = { version = "0.1.0-rc.2", features = ["deadpool_postgres"] }
